# random-name-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
